update of UCD, generated charts
git-svn-id: https://unicode.org/repos/unicodetools/trunk@661 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/data/charts/nameslist/n_0400.html
+++ b/unicodetools/data/charts/nameslist/n_0400.html
@@ -358,6 +358,7 @@
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>0313</code> ◌̓ combining comma above</td></tr>
 <tr><td><code><a name='0487'>0487</a></code></td><td class='c'> ◌҇ </td><td colSpan='2'><span class='name'>Combining Cyrillic Pokrytie</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>used only with letter titlos</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>also attested in Glagolitic</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>0311</code> ◌̑ combining inverted breve</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>A66F</code> ◌꙯ combining cyrillic vzmet</td></tr>
 <tr><td><code><a name='0488'>0488</a></code></td><td class='c'> ◌҈ </td><td colSpan='2'><span class='name'>Combining Cyrillic Hundred Thousands Sign</span></td></tr>
