--- a/unicodetools/data/charts/nameslist/n_0600.html
+++ b/unicodetools/data/charts/nameslist/n_0600.html
@@ -72,6 +72,7 @@
 <tr><td><code><a name='061B'>061B</a></code></td><td class='c' dir='rtl'> ‎؛‎ </td><td colSpan='2'><span class='name'>Arabic Semicolon</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>also used with Thaana and Syriac in modern text</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>003B</code> ; semicolon</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>204F</code> ⁏ reversed semicolon</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>2E35</code> ⸵ turned semicolon</td></tr>
 <tr><td colspan='4'><h2>Format character</h2></td></tr>
 <tr><td><code><a name='061C'>061C</a></code></td><td class='c' dir='rtl'> <span class='inv'>⬚</span> </td><td colSpan='2'><span class='name'>Arabic Letter Mark</span></td></tr>
@@ -131,8 +132,8 @@
 <tr><td colspan='4'><h2>Based on ISO 8859-6</h2></td></tr>
 <tr><td><code><a name='0640'>0640</a></code></td><td class='c' dir='rtl'> ‎ـ‎ </td><td colSpan='2'><span class='name'>Arabic Tatweel</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>=</td><td>kashida</td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>inserted to stretch characters</td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>also used with Syriac</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>inserted to stretch characters or to carry tashkil with no base letter</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>also used with Mandaic, Manichaean, Psalter Pahlavi, and Syriac</td></tr>
 <tr><td><code><a name='0641'>0641</a></code></td><td class='c' dir='rtl'> ‎ف‎ </td><td colSpan='2'><span class='name'>Arabic Letter Feh</span></td></tr>
 <tr><td><code><a name='0642'>0642</a></code></td><td class='c' dir='rtl'> ‎ق‎ </td><td colSpan='2'><span class='name'>Arabic Letter Qaf</span></td></tr>
 <tr><td><code><a name='0643'>0643</a></code></td><td class='c' dir='rtl'> ‎ك‎ </td><td colSpan='2'><span class='name'>Arabic Letter Kaf</span></td></tr>
@@ -142,15 +143,17 @@
 <tr><td><code><a name='0647'>0647</a></code></td><td class='c' dir='rtl'> ‎ه‎ </td><td colSpan='2'><span class='name'>Arabic Letter Heh</span></td></tr>
 <tr><td><code><a name='0648'>0648</a></code></td><td class='c' dir='rtl'> ‎و‎ </td><td colSpan='2'><span class='name'>Arabic Letter Waw</span></td></tr>
 <tr><td><code><a name='0649'>0649</a></code></td><td class='c' dir='rtl'> ‎ى‎ </td><td colSpan='2'><span class='name'>Arabic Letter Alef Maksura</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>represents YEH-shaped letter with no dots in any positional form</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>represents YEH-shaped dual-joining letter with no dots in any positional form</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>not intended for use in combination with <code>0654</code> ◌ٔ</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>0626</code> ‎ئ‎ arabic letter yeh with hamza above</td></tr>
 <tr><td><code><a name='064A'>064A</a></code></td><td class='c' dir='rtl'> ‎ي‎ </td><td colSpan='2'><span class='name'>Arabic Letter Yeh</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>loses its dots when used in combination with <code>0654</code> ◌ٔ</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>retains its dots when used in combination with other combining marks</td></tr>
-<tr><td colspan='4'><h2>Points from ISO 8859-6</h2></td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>08A8</code> ‎ࢨ‎ arabic letter yeh with two dots below and hamza above</td></tr>
+<tr><td colspan='4'><h2>Tashkil from ISO 8859-6</h2></td></tr>
 <tr><td><code><a name='064B'>064B</a></code></td><td class='c'> ◌ً </td><td colSpan='2'><span class='name'>Arabic Fathatan</span></td></tr>
 <tr><td><code><a name='064C'>064C</a></code></td><td class='c'> ◌ٌ </td><td colSpan='2'><span class='name'>Arabic Dammatan</span></td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>a common alternative form is written as two intertwined dammas, one of which is turned 180 degrees</td></tr>
 <tr><td><code><a name='064D'>064D</a></code></td><td class='c'> ◌ٍ </td><td colSpan='2'><span class='name'>Arabic Kasratan</span></td></tr>
 <tr><td><code><a name='064E'>064E</a></code></td><td class='c'> ◌َ </td><td colSpan='2'><span class='name'>Arabic Fatha</span></td></tr>
 <tr><td><code><a name='064F'>064F</a></code></td><td class='c'> ◌ُ </td><td colSpan='2'><span class='name'>Arabic Damma</span></td></tr>
@@ -164,8 +167,8 @@
 <tr><td colspan='4'><h2>Combining maddah and hamza</h2></td></tr>
 <tr><td><code><a name='0653'>0653</a></code></td><td class='c'> ◌ٓ </td><td colSpan='2'><span class='name'>Arabic Maddah Above</span></td></tr>
 <tr><td><code><a name='0654'>0654</a></code></td><td class='c'> ◌ٔ </td><td colSpan='2'><span class='name'>Arabic Hamza Above</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>not restricted to hamza semantics</td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>may also occur as a diacritic forming new letters</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>restricted to hamza and ezafe semantics</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>is not used as a diacritic to form new letters</td></tr>
 <tr><td><code><a name='0655'>0655</a></code></td><td class='c'> ◌ٕ </td><td colSpan='2'><span class='name'>Arabic Hamza Below</span></td></tr>
 <tr><td colspan='4'><h2>Other combining marks</h2></td></tr>
 <tr><td><code><a name='0656'>0656</a></code></td><td class='c'> ◌ٖ </td><td colSpan='2'><span class='name'>Arabic Subscript Alef</span></td></tr>
@@ -184,13 +187,13 @@
 <tr><td><code><a name='065C'>065C</a></code></td><td class='c'> ◌ٜ </td><td colSpan='2'><span class='name'>Arabic Vowel Sign Dot Below</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>African languages</td></tr>
 <tr><td><code><a name='065D'>065D</a></code></td><td class='c'> ◌ٝ </td><td colSpan='2'><span class='name'>Arabic Reversed Damma</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Ormuri, African languages</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>African languages</td></tr>
 <tr><td><code><a name='065E'>065E</a></code></td><td class='c'> ◌ٞ </td><td colSpan='2'><span class='name'>Arabic Fatha With Two Dots</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Kalami</td></tr>
 <tr><td><code><a name='065F'>065F</a></code></td><td class='c'> ◌ٟ </td><td colSpan='2'><span class='name'>Arabic Wavy Hamza Below</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Kashmiri</td></tr>
 <tr><td colspan='4'><h2>Arabic-Indic digits</h2></td></tr>
-<tr><td class='comment' colspan='4'>These digits are used with Arabic proper; for languages of Iran, Pakistan, and India, see the Eastern Arabic-Indic digits at 06F0..06F9.</td></tr>
+<tr><td class='comment' colspan='4'>These digits are used with Arabic proper; for languages of Iran, Afghanistan, Pakistan, and India, see the Eastern Arabic-Indic digits at 06F0..06F9.</td></tr>
 <tr><td><code><a name='0660'>0660</a></code></td><td class='c'> ٠ </td><td colSpan='2'><span class='name'>Arabic-Indic Digit Zero</span></td></tr>
 <tr><td><code><a name='0661'>0661</a></code></td><td class='c'> ١ </td><td colSpan='2'><span class='name'>Arabic-Indic Digit One</span></td></tr>
 <tr><td><code><a name='0662'>0662</a></code></td><td class='c'> ٢ </td><td colSpan='2'><span class='name'>Arabic-Indic Digit Two</span></td></tr>
@@ -339,7 +342,7 @@
 <tr><td><code><a name='06A6'>06A6</a></code></td><td class='c' dir='rtl'> ‎ڦ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Peheh</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Sindhi</td></tr>
 <tr><td><code><a name='06A7'>06A7</a></code></td><td class='c' dir='rtl'> ‎ڧ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Qaf With Dot Above</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Maghrib Arabic</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Maghrib Arabic, Uighur</td></tr>
 <tr><td><code><a name='06A8'>06A8</a></code></td><td class='c' dir='rtl'> ‎ڨ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Qaf With Three Dots Above</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Tunisian Arabic</td></tr>
 <tr><td><code><a name='06A9'>06A9</a></code></td><td class='c' dir='rtl'> ‎ک‎ </td><td colSpan='2'><span class='name'>Arabic Letter Keheh</span></td></tr>
@@ -376,8 +379,8 @@
 <tr><td><code><a name='06B8'>06B8</a></code></td><td class='c' dir='rtl'> ‎ڸ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Lam With Three Dots Below</span></td></tr>
 <tr><td><code><a name='06B9'>06B9</a></code></td><td class='c' dir='rtl'> ‎ڹ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Noon With Dot Below</span></td></tr>
 <tr><td><code><a name='06BA'>06BA</a></code></td><td class='c' dir='rtl'> ‎ں‎ </td><td colSpan='2'><span class='name'>Arabic Letter Noon Ghunna</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Urdu</td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>dotless in all contextual forms</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Urdu, archaic Arabic</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>dotless in all four contextual forms</td></tr>
 <tr><td><code><a name='06BB'>06BB</a></code></td><td class='c' dir='rtl'> ‎ڻ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Rnoon</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Sindhi</td></tr>
 <tr><td><code><a name='06BC'>06BC</a></code></td><td class='c' dir='rtl'> ‎ڼ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Noon With Ring</span></td></tr>
@@ -385,13 +388,12 @@
 <tr><td><code><a name='06BD'>06BD</a></code></td><td class='c' dir='rtl'> ‎ڽ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Noon With Three Dots Above</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>old Malay</td></tr>
 <tr><td><code><a name='06BE'>06BE</a></code></td><td class='c' dir='rtl'> ‎ھ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Heh Doachashmee</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Urdu</td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>forms aspirate digraphs</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>forms aspirate digraphs in Urdu and other languages of South Asia</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>represents the glottal fricative /h/ in Uighur</td></tr>
 <tr><td><code><a name='06BF'>06BF</a></code></td><td class='c' dir='rtl'> ‎ڿ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Tcheh With Dot Above</span></td></tr>
 <tr><td><code><a name='06C0'>06C0</a></code></td><td class='c' dir='rtl'> ‎ۀ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Heh With Yeh Above</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>=</td><td>arabic letter hamzah on ha (1.0)</td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>=</td><td>izafet</td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Urdu</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>for ezafe, use <code>0654</code> ◌ٔ over the language-appropriate base letter</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>actually a ligature, not an independent letter</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>≡</td><td><code>06D5</code> ‎ە‎ <code>0654</code> ◌ٔ</td></tr>
 <tr><td><code><a name='06C1'>06C1</a></code></td><td class='c' dir='rtl'> ‎ہ‎ </td><td colSpan='2'><span class='name'>Arabic Letter Heh Goal</span></td></tr>
@@ -466,7 +468,9 @@
 <tr><td><code><a name='06E2'>06E2</a></code></td><td class='c'> ◌ۢ </td><td colSpan='2'><span class='name'>Arabic Small High Meem Isolated Form</span></td></tr>
 <tr><td><code><a name='06E3'>06E3</a></code></td><td class='c'> ◌ۣ </td><td colSpan='2'><span class='name'>Arabic Small Low Seen</span></td></tr>
 <tr><td><code><a name='06E4'>06E4</a></code></td><td class='c'> ◌ۤ </td><td colSpan='2'><span class='name'>Arabic Small High Madda</span></td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>typically used with <code>06E5</code> ‎ۥ‎, <code>06E6</code> ‎ۦ‎, <code>06E7</code> ◌ۧ, and <code>08F3</code> ◌ࣳ</td></tr>
 <tr><td><code><a name='06E5'>06E5</a></code></td><td class='c' dir='rtl'> ‎ۥ‎ </td><td colSpan='2'><span class='name'>Arabic Small Waw</span></td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>08F3</code> ◌ࣳ arabic small high waw</td></tr>
 <tr><td><code><a name='06E6'>06E6</a></code></td><td class='c' dir='rtl'> ‎ۦ‎ </td><td colSpan='2'><span class='name'>Arabic Small Yeh</span></td></tr>
 <tr><td><code><a name='06E7'>06E7</a></code></td><td class='c'> ◌ۧ </td><td colSpan='2'><span class='name'>Arabic Small High Yeh</span></td></tr>
 <tr><td><code><a name='06E8'>06E8</a></code></td><td class='c'> ◌ۨ </td><td colSpan='2'><span class='name'>Arabic Small High Noon</span></td></tr>
