--- a/unicodetools/data/charts/nameslist/n_0900.html
+++ b/unicodetools/data/charts/nameslist/n_0900.html
@@ -29,12 +29,14 @@
 <tr><td><code><a name='090C'>090C</a></code></td><td class='c'> ऌ </td><td colSpan='2'><span class='name'>Devanagari Letter Vocalic L</span></td></tr>
 <tr><td><code><a name='090D'>090D</a></code></td><td class='c'> ऍ </td><td colSpan='2'><span class='name'>Devanagari Letter Candra E</span></td></tr>
 <tr><td><code><a name='090E'>090E</a></code></td><td class='c'> ऎ </td><td colSpan='2'><span class='name'>Devanagari Letter Short E</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>for transcribing Dravidian short e</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Kashmiri, Bihari languages</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>also used for transcribing Dravidian short e</td></tr>
 <tr><td><code><a name='090F'>090F</a></code></td><td class='c'> ए </td><td colSpan='2'><span class='name'>Devanagari Letter E</span></td></tr>
 <tr><td><code><a name='0910'>0910</a></code></td><td class='c'> ऐ </td><td colSpan='2'><span class='name'>Devanagari Letter Ai</span></td></tr>
 <tr><td><code><a name='0911'>0911</a></code></td><td class='c'> ऑ </td><td colSpan='2'><span class='name'>Devanagari Letter Candra O</span></td></tr>
 <tr><td><code><a name='0912'>0912</a></code></td><td class='c'> ऒ </td><td colSpan='2'><span class='name'>Devanagari Letter Short O</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>for transcribing Dravidian short o</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Kashmiri, Bihari languages</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>also used for transcribing Dravidian short o</td></tr>
 <tr><td><code><a name='0913'>0913</a></code></td><td class='c'> ओ </td><td colSpan='2'><span class='name'>Devanagari Letter O</span></td></tr>
 <tr><td><code><a name='0914'>0914</a></code></td><td class='c'> औ </td><td colSpan='2'><span class='name'>Devanagari Letter Au</span></td></tr>
 <tr><td colspan='4'><h2>Consonants</h2></td></tr>
@@ -82,7 +84,8 @@
 <tr><td><code><a name='0937'>0937</a></code></td><td class='c'> ष </td><td colSpan='2'><span class='name'>Devanagari Letter Ssa</span></td></tr>
 <tr><td><code><a name='0938'>0938</a></code></td><td class='c'> स </td><td colSpan='2'><span class='name'>Devanagari Letter Sa</span></td></tr>
 <tr><td><code><a name='0939'>0939</a></code></td><td class='c'> ह </td><td colSpan='2'><span class='name'>Devanagari Letter Ha</span></td></tr>
-<tr><td colspan='4'><h2>Dependent vowel signs for Kashmiri</h2></td></tr>
+<tr><td colspan='4'><h2>Dependent vowel signs</h2></td></tr>
+<tr><td class='comment' colspan='4'>These dependent vowel signs are used in Kashmiri and in the Bihari languages (Bhojpuri, Magadhi, and Maithili).</td></tr>
 <tr><td><code><a name='093A'>093A</a></code></td><td class='c'> ◌ऺ </td><td colSpan='2'><span class='name'>Devanagari Vowel Sign Oe</span></td></tr>
 <tr><td><code><a name='093B'>093B</a></code></td><td class='c'> ऻ </td><td colSpan='2'><span class='name'>Devanagari Vowel Sign Ooe</span></td></tr>
 <tr><td colspan='4'><h2>Various signs</h2></td></tr>
@@ -101,12 +104,14 @@
 <tr><td><code><a name='0945'>0945</a></code></td><td class='c'> ◌ॅ </td><td colSpan='2'><span class='name'>Devanagari Vowel Sign Candra E</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>=</td><td>candra</td></tr>
 <tr><td><code><a name='0946'>0946</a></code></td><td class='c'> ◌ॆ </td><td colSpan='2'><span class='name'>Devanagari Vowel Sign Short E</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>for transcribing Dravidian vowels</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Kashmiri, Bihari languages</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>also used for transcribing Dravidian short e</td></tr>
 <tr><td><code><a name='0947'>0947</a></code></td><td class='c'> ◌े </td><td colSpan='2'><span class='name'>Devanagari Vowel Sign E</span></td></tr>
 <tr><td><code><a name='0948'>0948</a></code></td><td class='c'> ◌ै </td><td colSpan='2'><span class='name'>Devanagari Vowel Sign Ai</span></td></tr>
 <tr><td><code><a name='0949'>0949</a></code></td><td class='c'> ॉ </td><td colSpan='2'><span class='name'>Devanagari Vowel Sign Candra O</span></td></tr>
 <tr><td><code><a name='094A'>094A</a></code></td><td class='c'> ॊ </td><td colSpan='2'><span class='name'>Devanagari Vowel Sign Short O</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>for transcribing Dravidian vowels</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Kashmiri, Bihari languages</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>also used for transcribing Dravidian short o</td></tr>
 <tr><td><code><a name='094B'>094B</a></code></td><td class='c'> ो </td><td colSpan='2'><span class='name'>Devanagari Vowel Sign O</span></td></tr>
 <tr><td><code><a name='094C'>094C</a></code></td><td class='c'> ौ </td><td colSpan='2'><span class='name'>Devanagari Vowel Sign Au</span></td></tr>
 <tr><td colspan='4'><h2>Virama</h2></td></tr>
@@ -118,7 +123,7 @@
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>character has historic use only</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>combines with E to form AI, with AA to form O, and with O to form AU</td></tr>
 <tr><td><code><a name='094F'>094F</a></code></td><td class='c'> ॏ </td><td colSpan='2'><span class='name'>Devanagari Vowel Sign Aw</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Kashmiri</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Kashmiri, Bihari languages</td></tr>
 <tr><td colspan='4'><h2>Sign</h2></td></tr>
 <tr><td><code><a name='0950'>0950</a></code></td><td class='c'> ॐ </td><td colSpan='2'><span class='name'>Devanagari Om</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>1F549</code> 🕉 om symbol</td></tr>
@@ -189,10 +194,12 @@
 <tr><td><code><a name='0971'>0971</a></code></td><td class='c'> ॱ </td><td colSpan='2'><span class='name'>Devanagari Sign High Spacing Dot</span></td></tr>
 <tr><td colspan='4'><h2>Independent vowel for Marathi</h2></td></tr>
 <tr><td><code><a name='0972'>0972</a></code></td><td class='c'> ॲ </td><td colSpan='2'><span class='name'>Devanagari Letter Candra A</span></td></tr>
-<tr><td colspan='4'><h2>Independent vowels for Kashmiri</h2></td></tr>
+<tr><td colspan='4'><h2>Independent vowels</h2></td></tr>
+<tr><td class='comment' colspan='4'>These independent vowels are used in Kashmiri and in the Bihari languages.</td></tr>
 <tr><td><code><a name='0973'>0973</a></code></td><td class='c'> ॳ </td><td colSpan='2'><span class='name'>Devanagari Letter Oe</span></td></tr>
 <tr><td><code><a name='0974'>0974</a></code></td><td class='c'> ॴ </td><td colSpan='2'><span class='name'>Devanagari Letter Ooe</span></td></tr>
 <tr><td><code><a name='0975'>0975</a></code></td><td class='c'> ॵ </td><td colSpan='2'><span class='name'>Devanagari Letter Aw</span></td></tr>
+<tr><td colspan='4'><h2>Independent vowels for Kashmiri</h2></td></tr>
 <tr><td><code><a name='0976'>0976</a></code></td><td class='c'> ॶ </td><td colSpan='2'><span class='name'>Devanagari Letter Ue</span></td></tr>
 <tr><td><code><a name='0977'>0977</a></code></td><td class='c'> ॷ </td><td colSpan='2'><span class='name'>Devanagari Letter Uue</span></td></tr>
 <tr><td colspan='4'><h2>Additional consonants</h2></td></tr>
