--- a/unicodetools/data/charts/nameslist/n_1DC0.html
+++ b/unicodetools/data/charts/nameslist/n_1DC0.html
@@ -84,6 +84,7 @@
 <tr><td><code><a name='1DFC'>1DFC</a></code></td><td class='c'> ◌᷼ </td><td colSpan='2'><span class='name'>Combining Double Inverted Breve Below</span></td></tr>
 <tr><td colspan='4'><h2>Miscellaneous mark</h2></td></tr>
 <tr><td><code><a name='1DFD'>1DFD</a></code></td><td class='c'> ◌᷽ </td><td colSpan='2'><span class='name'>Combining Almost Equal To Below</span></td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>diacritic indicating a strident vowel in Khoisan languages</td></tr>
 <tr><td colspan='4'><h2>Additional marks for UPA</h2></td></tr>
 <tr><td><code><a name='1DFE'>1DFE</a></code></td><td class='c'> ◌᷾ </td><td colSpan='2'><span class='name'>Combining Left Arrowhead Above</span></td></tr>
 <tr><td><code><a name='1DFF'>1DFF</a></code></td><td class='c'> ◌᷿ </td><td colSpan='2'><span class='name'>Combining Right Arrowhead And Down Arrowhead Below</span></td></tr>
