--- a/unicodetools/data/charts/nameslist/n_1F300.html
+++ b/unicodetools/data/charts/nameslist/n_1F300.html
@@ -962,18 +962,18 @@
 <tr><td class='new'><code><a name='1F53F'>1F53F</a></code></td><td class='c'> 🔿 </td><td colSpan='2' class='new'><span class='name'>Upper Right Shadowed White Circle</span></td></tr>
 <tr><td colspan='4'><h2>Religious symbols</h2></td></tr>
 <tr><td><code><a name='1F540'>1F540</a></code></td><td class='c'> 🕀 </td><td colSpan='2'><span class='name'>Circled Cross Pommee</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typikon symbol for great feast service</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typicon symbol for great feast service</td></tr>
 <tr><td><code><a name='1F541'>1F541</a></code></td><td class='c'> 🕁 </td><td colSpan='2'><span class='name'>Cross Pommee With Half-Circle Below</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typikon symbol for vigil service</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typicon symbol for vigil service</td></tr>
 <tr><td><code><a name='1F542'>1F542</a></code></td><td class='c'> 🕂 </td><td colSpan='2'><span class='name'>Cross Pommee</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typikon symbol for Polyeleos</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typicon symbol for Polyeleos</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>2722</code> ✢ four teardrop-spoked asterisk</td></tr>
 <tr><td><code><a name='1F543'>1F543</a></code></td><td class='c'> 🕃 </td><td colSpan='2'><span class='name'>Notched Left Semicircle With Three Dots</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typikon symbol for lower rank feast</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typicon symbol for lower rank feast</td></tr>
 <tr><td class='new'><code><a name='1F544'>1F544</a></code></td><td class='c'> 🕄 </td><td colSpan='2' class='new'><span class='name'>Notched Right Semicircle With Three Dots</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typikon for lower rank feast</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typicon symbol for lower rank feast</td></tr>
 <tr><td class='new'><code><a name='1F545'>1F545</a></code></td><td class='c'> 🕅 </td><td colSpan='2' class='new'><span class='name'>Symbol For Marks Chapter</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typikon for difficult sections</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>Orthodox typicon symbol for difficult sections</td></tr>
 <tr><td class='new'><code><a name='1F546'>1F546</a></code></td><td class='c'> 🕆 </td><td colSpan='2' class='new'><span class='name'>White Latin Cross</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>=</td><td>cross outline</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>271E</code> ✞ shadowed white latin cross</td></tr>
