--- a/unicodetools/data/charts/nameslist/n_2000.html
+++ b/unicodetools/data/charts/nameslist/n_2000.html
@@ -293,7 +293,9 @@
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>002A</code> * asterisk</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>0359</code> ◌͙ combining asterisk below</td></tr>
 <tr><td><code><a name='204F'>204F</a></code></td><td class='c'> ⁏ </td><td colSpan='2'><span class='name'>Reversed Semicolon</span></td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>also used in Sindhi</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>003B</code> ; semicolon</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>061B</code> ‎؛‎ arabic semicolon</td></tr>
 <tr><td><code><a name='2050'>2050</a></code></td><td class='c'> ⁐ </td><td colSpan='2'><span class='name'>Close Up</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>editing mark</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>AB5B</code> ꭛ modifier breve with inverted breve</td></tr>
