--- a/unicodetools/data/charts/nameslist/n_2700.html
+++ b/unicodetools/data/charts/nameslist/n_2700.html
@@ -167,7 +167,7 @@
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>007C</code> | vertical line</td></tr>
 <tr><td><code><a name='2759'>2759</a></code></td><td class='c'> ❙ </td><td colSpan='2'><span class='name'>Medium Vertical Bar</span></td></tr>
 <tr><td><code><a name='275A'>275A</a></code></td><td class='c'> ❚ </td><td colSpan='2'><span class='name'>Heavy Vertical Bar</span></td></tr>
-<tr><td colspan='4'><h2>Punctuation ornaments</h2></td></tr>
+<tr><td colspan='4'><h2>Punctuation mark ornaments</h2></td></tr>
 <tr><td><code><a name='275B'>275B</a></code></td><td class='c'> ❛ </td><td colSpan='2'><span class='name'>Heavy Single Turned Comma Quotation Mark Ornament</span></td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>2018</code> ‘ left single quotation mark</td></tr>
 <tr><td><code><a name='275C'>275C</a></code></td><td class='c'> ❜ </td><td colSpan='2'><span class='name'>Heavy Single Comma Quotation Mark Ornament</span></td></tr>
