--- a/unicodetools/data/charts/nameslist/n_2E00.html
+++ b/unicodetools/data/charts/nameslist/n_2E00.html
@@ -171,6 +171,7 @@
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>A78A</code> ꞊ modifier letter short equals sign</td></tr>
 <tr><td colspan='4'><h2>Reversed punctuation</h2></td></tr>
 <tr><td class='new'><code><a name='2E41'>2E41</a></code></td><td class='c'> ⹁ </td><td colSpan='2' class='new'><span class='name'>Reversed Comma</span></td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>also used in Sindhi</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>002C</code> , comma</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>060C</code> ، arabic comma</td></tr>
 <tr><td class='new'><code><a name='2E42'>2E42</a></code></td><td class='c'> ⹂ </td><td colSpan='2' class='new'><span class='name'>Double Low-Reversed-9 Quotation Mark</span></td></tr>
