--- a/unicodetools/data/charts/nameslist/n_A640.html
+++ b/unicodetools/data/charts/nameslist/n_A640.html
@@ -126,7 +126,7 @@
 <tr><td> </td><td class='char'> </td><td class='c'>•</td><td>used in the epithet 'many-eyed'</td></tr>
 <tr><td colspan='4'><h2>Abbreviation mark</h2></td></tr>
 <tr><td><code><a name='A66F'>A66F</a></code></td><td class='c'> ◌꙯ </td><td colSpan='2'><span class='name'>Combining Cyrillic Vzmet</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>used with Cyrillic letters to indicate abbreviation</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>used with Cyrillic and Glagolitic letters to indicate abbreviation</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>0483</code> ◌҃ combining cyrillic titlo</td></tr>
 <tr><td> </td><td class='char'> </td><td class='c'>→</td><td><code>0487</code> ◌҇ combining cyrillic pokrytie</td></tr>
 <tr><td colspan='4'><h2>Combining numeric signs</h2></td></tr>
