--- a/unicodetools/data/charts/nameslist/n_F900.html
+++ b/unicodetools/data/charts/nameslist/n_F900.html
@@ -8,7 +8,7 @@
 <body>
 <h1>CJK Compatibility Ideographs</h1>
 <p><table>
-<tr><td class='comment' colspan='4'>This block, despite its name, contains a number of unified CJK ideographs. Those characters are individually identified by annotations.</td></tr>
+<tr><td class='comment' colspan='4'>This block, despite its name, contains a number of unified CJK ideographs. Each is also individually identified by an annotation.</td></tr>
 <tr><td class='comment' colspan='4'>Subheaders identifying sources for subranges do not indicate required usage or preclude mappings to other sources. For example, many pronunciation variants from KS X 1001:1998 are also mapped to a J source.</td></tr>
 <tr><td colspan='4'><h2>Pronunciation variants from KS X 1001:1998</h2></td></tr>
 <tr><td width='1pt'><code><a name='F900'>F900</a></code></td><td class='c'> 豈 </td><td colSpan='2'><span class='name'>Cjk Compatibility Ideograph-F900</span></td></tr>
