--- a/unicodetools/data/charts/script/chart_Duployan.html
+++ b/unicodetools/data/charts/script/chart_Duployan.html
@@ -159,4 +159,9 @@
 <td class='new' title='DUPLOYAN THICK LETTER SELECTOR'>&#x25CC;&#x1BC9D;<br><tt>1BC9D</tt></td>
 <td class='new' title='DUPLOYAN DOUBLE MARK'>&#x25CC;&#x1BC9E;<br><tt>1BC9E</tt></td>
 <td class='new' title='DUPLOYAN PUNCTUATION CHINOOK FULL STOP'>&#x1BC9F;<br><tt>1BC9F</tt></td>
+</tr><tr>
+<td class='new' title='SHORTHAND FORMAT LETTER OVERLAP'>&#x1BCA0;<br><tt>1BCA0</tt></td>
+<td class='new' title='SHORTHAND FORMAT CONTINUING OVERLAP'>&#x1BCA1;<br><tt>1BCA1</tt></td>
+<td class='new' title='SHORTHAND FORMAT DOWN STEP'>&#x1BCA2;<br><tt>1BCA2</tt></td>
+<td class='new' title='SHORTHAND FORMAT UP STEP'>&#x1BCA3;<br><tt>1BCA3</tt></td>
 </table></body></html>
