--- a/unicodetools/data/charts/script/chart_Grantha.html
+++ b/unicodetools/data/charts/script/chart_Grantha.html
@@ -4,6 +4,8 @@
 <link rel='stylesheet' href='charts.css' type='text/css'>
 </head><body><h2>Grantha</h2>
 <table>
+<td  title='DEVANAGARI DANDA'>&#x964;<br><tt>0964</tt></td>
+<td  title='DEVANAGARI DOUBLE DANDA'>&#x965;<br><tt>0965</tt></td>
 <td class='new' title='GRANTHA SIGN CANDRABINDU'>&#x25CC;&#x11301;<br><tt>11301</tt></td>
 <td class='new' title='GRANTHA SIGN ANUSVARA'>&#x25CC;&#x11302;<br><tt>11302</tt></td>
 <td class='new' title='GRANTHA SIGN VISARGA'>&#x25CC;&#x11303;<br><tt>11303</tt></td>
@@ -13,9 +15,9 @@
 <td class='new' title='GRANTHA LETTER II'>&#x11308;<br><tt>11308</tt></td>
 <td class='new' title='GRANTHA LETTER U'>&#x11309;<br><tt>11309</tt></td>
 <td class='new' title='GRANTHA LETTER UU'>&#x1130A;<br><tt>1130A</tt></td>
+</tr><tr>
 <td class='new' title='GRANTHA LETTER VOCALIC R'>&#x1130B;<br><tt>1130B</tt></td>
 <td class='new' title='GRANTHA LETTER VOCALIC L'>&#x1130C;<br><tt>1130C</tt></td>
-</tr><tr>
 <td class='new' title='GRANTHA LETTER EE'>&#x1130F;<br><tt>1130F</tt></td>
 <td class='new' title='GRANTHA LETTER AI'>&#x11310;<br><tt>11310</tt></td>
 <td class='new' title='GRANTHA LETTER OO'>&#x11313;<br><tt>11313</tt></td>
@@ -25,9 +27,9 @@
 <td class='new' title='GRANTHA LETTER GA'>&#x11317;<br><tt>11317</tt></td>
 <td class='new' title='GRANTHA LETTER GHA'>&#x11318;<br><tt>11318</tt></td>
 <td class='new' title='GRANTHA LETTER NGA'>&#x11319;<br><tt>11319</tt></td>
+</tr><tr>
 <td class='new' title='GRANTHA LETTER CA'>&#x1131A;<br><tt>1131A</tt></td>
 <td class='new' title='GRANTHA LETTER CHA'>&#x1131B;<br><tt>1131B</tt></td>
-</tr><tr>
 <td class='new' title='GRANTHA LETTER JA'>&#x1131C;<br><tt>1131C</tt></td>
 <td class='new' title='GRANTHA LETTER JHA'>&#x1131D;<br><tt>1131D</tt></td>
 <td class='new' title='GRANTHA LETTER NYA'>&#x1131E;<br><tt>1131E</tt></td>
@@ -37,9 +39,9 @@
 <td class='new' title='GRANTHA LETTER DDHA'>&#x11322;<br><tt>11322</tt></td>
 <td class='new' title='GRANTHA LETTER NNA'>&#x11323;<br><tt>11323</tt></td>
 <td class='new' title='GRANTHA LETTER TA'>&#x11324;<br><tt>11324</tt></td>
+</tr><tr>
 <td class='new' title='GRANTHA LETTER THA'>&#x11325;<br><tt>11325</tt></td>
 <td class='new' title='GRANTHA LETTER DA'>&#x11326;<br><tt>11326</tt></td>
-</tr><tr>
 <td class='new' title='GRANTHA LETTER DHA'>&#x11327;<br><tt>11327</tt></td>
 <td class='new' title='GRANTHA LETTER NA'>&#x11328;<br><tt>11328</tt></td>
 <td class='new' title='GRANTHA LETTER PA'>&#x1132A;<br><tt>1132A</tt></td>
@@ -49,9 +51,9 @@
 <td class='new' title='GRANTHA LETTER MA'>&#x1132E;<br><tt>1132E</tt></td>
 <td class='new' title='GRANTHA LETTER YA'>&#x1132F;<br><tt>1132F</tt></td>
 <td class='new' title='GRANTHA LETTER RA'>&#x11330;<br><tt>11330</tt></td>
+</tr><tr>
 <td class='new' title='GRANTHA LETTER LA'>&#x11332;<br><tt>11332</tt></td>
 <td class='new' title='GRANTHA LETTER LLA'>&#x11333;<br><tt>11333</tt></td>
-</tr><tr>
 <td class='new' title='GRANTHA LETTER VA'>&#x11335;<br><tt>11335</tt></td>
 <td class='new' title='GRANTHA LETTER SHA'>&#x11336;<br><tt>11336</tt></td>
 <td class='new' title='GRANTHA LETTER SSA'>&#x11337;<br><tt>11337</tt></td>
@@ -61,9 +63,9 @@
 <td class='new' title='GRANTHA SIGN AVAGRAHA'>&#x1133D;<br><tt>1133D</tt></td>
 <td class='new' title='GRANTHA VOWEL SIGN AA'>&#x25CC;&#x1133E;<br><tt>1133E</tt></td>
 <td class='new' title='GRANTHA VOWEL SIGN I'>&#x25CC;&#x1133F;<br><tt>1133F</tt></td>
+</tr><tr>
 <td class='new' title='GRANTHA VOWEL SIGN II'>&#x25CC;&#x11340;<br><tt>11340</tt></td>
 <td class='new' title='GRANTHA VOWEL SIGN U'>&#x25CC;&#x11341;<br><tt>11341</tt></td>
-</tr><tr>
 <td class='new' title='GRANTHA VOWEL SIGN UU'>&#x25CC;&#x11342;<br><tt>11342</tt></td>
 <td class='new' title='GRANTHA VOWEL SIGN VOCALIC R'>&#x25CC;&#x11343;<br><tt>11343</tt></td>
 <td class='new' title='GRANTHA VOWEL SIGN VOCALIC RR'>&#x25CC;&#x11344;<br><tt>11344</tt></td>
@@ -73,9 +75,9 @@
 <td class='new' title='GRANTHA VOWEL SIGN AI'>&#x25CC;&#x11348;<br><tt>11348</tt></td>
 <td class='new' title='GRANTHA SIGN VIRAMA'>&#x25CC;&#x1134D;<br><tt>1134D</tt></td>
 <td class='new' title='GRANTHA AU LENGTH MARK'>&#x25CC;&#x11357;<br><tt>11357</tt></td>
+</tr><tr>
 <td class='new' title='GRANTHA SIGN PLUTA'>&#x1135D;<br><tt>1135D</tt></td>
 <td class='new' title='GRANTHA LETTER VEDIC ANUSVARA'>&#x1135E;<br><tt>1135E</tt></td>
-</tr><tr>
 <td class='new' title='GRANTHA LETTER VEDIC DOUBLE ANUSVARA'>&#x1135F;<br><tt>1135F</tt></td>
 <td class='new' title='GRANTHA LETTER VOCALIC RR'>&#x11360;<br><tt>11360</tt></td>
 <td class='new' title='GRANTHA LETTER VOCALIC LL'>&#x11361;<br><tt>11361</tt></td>
@@ -85,9 +87,9 @@
 <td class='new' title='COMBINING GRANTHA DIGIT ONE'>&#x25CC;&#x11367;<br><tt>11367</tt></td>
 <td class='new' title='COMBINING GRANTHA DIGIT TWO'>&#x25CC;&#x11368;<br><tt>11368</tt></td>
 <td class='new' title='COMBINING GRANTHA DIGIT THREE'>&#x25CC;&#x11369;<br><tt>11369</tt></td>
+</tr><tr>
 <td class='new' title='COMBINING GRANTHA DIGIT FOUR'>&#x25CC;&#x1136A;<br><tt>1136A</tt></td>
 <td class='new' title='COMBINING GRANTHA DIGIT FIVE'>&#x25CC;&#x1136B;<br><tt>1136B</tt></td>
-</tr><tr>
 <td class='new' title='COMBINING GRANTHA DIGIT SIX'>&#x25CC;&#x1136C;<br><tt>1136C</tt></td>
 <td class='new' title='COMBINING GRANTHA LETTER A'>&#x25CC;&#x11370;<br><tt>11370</tt></td>
 <td class='new' title='COMBINING GRANTHA LETTER KA'>&#x25CC;&#x11371;<br><tt>11371</tt></td>
