--- a/unicodetools/data/charts/script/chart_Khudawadi.html
+++ b/unicodetools/data/charts/script/chart_Khudawadi.html
@@ -4,6 +4,19 @@
 <link rel='stylesheet' href='charts.css' type='text/css'>
 </head><body><h2>Khudawadi</h2>
 <table>
+<td  title='DEVANAGARI DANDA'>&#x964;<br><tt>0964</tt></td>
+<td  title='DEVANAGARI DOUBLE DANDA'>&#x965;<br><tt>0965</tt></td>
+<td  title='NORTH INDIC FRACTION ONE QUARTER'>&#xA830;<br><tt>A830</tt></td>
+<td  title='NORTH INDIC FRACTION ONE HALF'>&#xA831;<br><tt>A831</tt></td>
+<td  title='NORTH INDIC FRACTION THREE QUARTERS'>&#xA832;<br><tt>A832</tt></td>
+<td  title='NORTH INDIC FRACTION ONE SIXTEENTH'>&#xA833;<br><tt>A833</tt></td>
+<td  title='NORTH INDIC FRACTION ONE EIGHTH'>&#xA834;<br><tt>A834</tt></td>
+<td  title='NORTH INDIC FRACTION THREE SIXTEENTHS'>&#xA835;<br><tt>A835</tt></td>
+<td  title='NORTH INDIC QUARTER MARK'>&#xA836;<br><tt>A836</tt></td>
+<td  title='NORTH INDIC PLACEHOLDER MARK'>&#xA837;<br><tt>A837</tt></td>
+<td  title='NORTH INDIC RUPEE MARK'>&#xA838;<br><tt>A838</tt></td>
+</tr><tr>
+<td  title='NORTH INDIC QUANTITY MARK'>&#xA839;<br><tt>A839</tt></td>
 <td class='new' title='KHUDAWADI LETTER A'>&#x112B0;<br><tt>112B0</tt></td>
 <td class='new' title='KHUDAWADI LETTER AA'>&#x112B1;<br><tt>112B1</tt></td>
 <td class='new' title='KHUDAWADI LETTER I'>&#x112B2;<br><tt>112B2</tt></td>
@@ -14,8 +27,8 @@
 <td class='new' title='KHUDAWADI LETTER AI'>&#x112B7;<br><tt>112B7</tt></td>
 <td class='new' title='KHUDAWADI LETTER O'>&#x112B8;<br><tt>112B8</tt></td>
 <td class='new' title='KHUDAWADI LETTER AU'>&#x112B9;<br><tt>112B9</tt></td>
-<td class='new' title='KHUDAWADI LETTER KA'>&#x112BA;<br><tt>112BA</tt></td>
 </tr><tr>
+<td class='new' title='KHUDAWADI LETTER KA'>&#x112BA;<br><tt>112BA</tt></td>
 <td class='new' title='KHUDAWADI LETTER KHA'>&#x112BB;<br><tt>112BB</tt></td>
 <td class='new' title='KHUDAWADI LETTER GA'>&#x112BC;<br><tt>112BC</tt></td>
 <td class='new' title='KHUDAWADI LETTER GGA'>&#x112BD;<br><tt>112BD</tt></td>
@@ -26,8 +39,8 @@
 <td class='new' title='KHUDAWADI LETTER JA'>&#x112C2;<br><tt>112C2</tt></td>
 <td class='new' title='KHUDAWADI LETTER JJA'>&#x112C3;<br><tt>112C3</tt></td>
 <td class='new' title='KHUDAWADI LETTER JHA'>&#x112C4;<br><tt>112C4</tt></td>
-<td class='new' title='KHUDAWADI LETTER NYA'>&#x112C5;<br><tt>112C5</tt></td>
 </tr><tr>
+<td class='new' title='KHUDAWADI LETTER NYA'>&#x112C5;<br><tt>112C5</tt></td>
 <td class='new' title='KHUDAWADI LETTER TTA'>&#x112C6;<br><tt>112C6</tt></td>
 <td class='new' title='KHUDAWADI LETTER TTHA'>&#x112C7;<br><tt>112C7</tt></td>
 <td class='new' title='KHUDAWADI LETTER DDA'>&#x112C8;<br><tt>112C8</tt></td>
@@ -38,8 +51,8 @@
 <td class='new' title='KHUDAWADI LETTER TA'>&#x112CD;<br><tt>112CD</tt></td>
 <td class='new' title='KHUDAWADI LETTER THA'>&#x112CE;<br><tt>112CE</tt></td>
 <td class='new' title='KHUDAWADI LETTER DA'>&#x112CF;<br><tt>112CF</tt></td>
-<td class='new' title='KHUDAWADI LETTER DHA'>&#x112D0;<br><tt>112D0</tt></td>
 </tr><tr>
+<td class='new' title='KHUDAWADI LETTER DHA'>&#x112D0;<br><tt>112D0</tt></td>
 <td class='new' title='KHUDAWADI LETTER NA'>&#x112D1;<br><tt>112D1</tt></td>
 <td class='new' title='KHUDAWADI LETTER PA'>&#x112D2;<br><tt>112D2</tt></td>
 <td class='new' title='KHUDAWADI LETTER PHA'>&#x112D3;<br><tt>112D3</tt></td>
@@ -50,8 +63,8 @@
 <td class='new' title='KHUDAWADI LETTER YA'>&#x112D8;<br><tt>112D8</tt></td>
 <td class='new' title='KHUDAWADI LETTER RA'>&#x112D9;<br><tt>112D9</tt></td>
 <td class='new' title='KHUDAWADI LETTER LA'>&#x112DA;<br><tt>112DA</tt></td>
-<td class='new' title='KHUDAWADI LETTER VA'>&#x112DB;<br><tt>112DB</tt></td>
 </tr><tr>
+<td class='new' title='KHUDAWADI LETTER VA'>&#x112DB;<br><tt>112DB</tt></td>
 <td class='new' title='KHUDAWADI LETTER SHA'>&#x112DC;<br><tt>112DC</tt></td>
 <td class='new' title='KHUDAWADI LETTER SA'>&#x112DD;<br><tt>112DD</tt></td>
 <td class='new' title='KHUDAWADI LETTER HA'>&#x112DE;<br><tt>112DE</tt></td>
@@ -62,8 +75,8 @@
 <td class='new' title='KHUDAWADI VOWEL SIGN U'>&#x25CC;&#x112E3;<br><tt>112E3</tt></td>
 <td class='new' title='KHUDAWADI VOWEL SIGN UU'>&#x25CC;&#x112E4;<br><tt>112E4</tt></td>
 <td class='new' title='KHUDAWADI VOWEL SIGN E'>&#x25CC;&#x112E5;<br><tt>112E5</tt></td>
-<td class='new' title='KHUDAWADI VOWEL SIGN AI'>&#x25CC;&#x112E6;<br><tt>112E6</tt></td>
 </tr><tr>
+<td class='new' title='KHUDAWADI VOWEL SIGN AI'>&#x25CC;&#x112E6;<br><tt>112E6</tt></td>
 <td class='new' title='KHUDAWADI VOWEL SIGN O'>&#x25CC;&#x112E7;<br><tt>112E7</tt></td>
 <td class='new' title='KHUDAWADI VOWEL SIGN AU'>&#x25CC;&#x112E8;<br><tt>112E8</tt></td>
 <td class='new' title='KHUDAWADI SIGN NUKTA'>&#x25CC;&#x112E9;<br><tt>112E9</tt></td>
@@ -74,8 +87,8 @@
 <td class='new' title='KHUDAWADI DIGIT THREE'>&#x112F3;<br><tt>112F3</tt></td>
 <td class='new' title='KHUDAWADI DIGIT FOUR'>&#x112F4;<br><tt>112F4</tt></td>
 <td class='new' title='KHUDAWADI DIGIT FIVE'>&#x112F5;<br><tt>112F5</tt></td>
-<td class='new' title='KHUDAWADI DIGIT SIX'>&#x112F6;<br><tt>112F6</tt></td>
 </tr><tr>
+<td class='new' title='KHUDAWADI DIGIT SIX'>&#x112F6;<br><tt>112F6</tt></td>
 <td class='new' title='KHUDAWADI DIGIT SEVEN'>&#x112F7;<br><tt>112F7</tt></td>
 <td class='new' title='KHUDAWADI DIGIT EIGHT'>&#x112F8;<br><tt>112F8</tt></td>
 <td class='new' title='KHUDAWADI DIGIT NINE'>&#x112F9;<br><tt>112F9</tt></td>
