--- a/unicodetools/data/charts/script/chart_Mahajani.html
+++ b/unicodetools/data/charts/script/chart_Mahajani.html
@@ -4,6 +4,8 @@
 <link rel='stylesheet' href='charts.css' type='text/css'>
 </head><body><h2>Mahajani</h2>
 <table>
+<td  title='DEVANAGARI DANDA'>&#x964;<br><tt>0964</tt></td>
+<td  title='DEVANAGARI DOUBLE DANDA'>&#x965;<br><tt>0965</tt></td>
 <td  title='NORTH INDIC FRACTION ONE QUARTER'>&#xA830;<br><tt>A830</tt></td>
 <td  title='NORTH INDIC FRACTION ONE HALF'>&#xA831;<br><tt>A831</tt></td>
 <td  title='NORTH INDIC FRACTION THREE QUARTERS'>&#xA832;<br><tt>A832</tt></td>
@@ -13,9 +15,9 @@
 <td  title='NORTH INDIC QUARTER MARK'>&#xA836;<br><tt>A836</tt></td>
 <td  title='NORTH INDIC PLACEHOLDER MARK'>&#xA837;<br><tt>A837</tt></td>
 <td  title='NORTH INDIC RUPEE MARK'>&#xA838;<br><tt>A838</tt></td>
+</tr><tr>
 <td  title='NORTH INDIC QUANTITY MARK'>&#xA839;<br><tt>A839</tt></td>
 <td class='new' title='MAHAJANI LETTER A'>&#x11150;<br><tt>11150</tt></td>
-</tr><tr>
 <td class='new' title='MAHAJANI LETTER I'>&#x11151;<br><tt>11151</tt></td>
 <td class='new' title='MAHAJANI LETTER U'>&#x11152;<br><tt>11152</tt></td>
 <td class='new' title='MAHAJANI LETTER E'>&#x11153;<br><tt>11153</tt></td>
@@ -25,9 +27,9 @@
 <td class='new' title='MAHAJANI LETTER GA'>&#x11157;<br><tt>11157</tt></td>
 <td class='new' title='MAHAJANI LETTER GHA'>&#x11158;<br><tt>11158</tt></td>
 <td class='new' title='MAHAJANI LETTER CA'>&#x11159;<br><tt>11159</tt></td>
+</tr><tr>
 <td class='new' title='MAHAJANI LETTER CHA'>&#x1115A;<br><tt>1115A</tt></td>
 <td class='new' title='MAHAJANI LETTER JA'>&#x1115B;<br><tt>1115B</tt></td>
-</tr><tr>
 <td class='new' title='MAHAJANI LETTER JHA'>&#x1115C;<br><tt>1115C</tt></td>
 <td class='new' title='MAHAJANI LETTER NYA'>&#x1115D;<br><tt>1115D</tt></td>
 <td class='new' title='MAHAJANI LETTER TTA'>&#x1115E;<br><tt>1115E</tt></td>
@@ -37,9 +39,9 @@
 <td class='new' title='MAHAJANI LETTER NNA'>&#x11162;<br><tt>11162</tt></td>
 <td class='new' title='MAHAJANI LETTER TA'>&#x11163;<br><tt>11163</tt></td>
 <td class='new' title='MAHAJANI LETTER THA'>&#x11164;<br><tt>11164</tt></td>
+</tr><tr>
 <td class='new' title='MAHAJANI LETTER DA'>&#x11165;<br><tt>11165</tt></td>
 <td class='new' title='MAHAJANI LETTER DHA'>&#x11166;<br><tt>11166</tt></td>
-</tr><tr>
 <td class='new' title='MAHAJANI LETTER NA'>&#x11167;<br><tt>11167</tt></td>
 <td class='new' title='MAHAJANI LETTER PA'>&#x11168;<br><tt>11168</tt></td>
 <td class='new' title='MAHAJANI LETTER PHA'>&#x11169;<br><tt>11169</tt></td>
@@ -49,9 +51,9 @@
 <td class='new' title='MAHAJANI LETTER RA'>&#x1116D;<br><tt>1116D</tt></td>
 <td class='new' title='MAHAJANI LETTER LA'>&#x1116E;<br><tt>1116E</tt></td>
 <td class='new' title='MAHAJANI LETTER VA'>&#x1116F;<br><tt>1116F</tt></td>
+</tr><tr>
 <td class='new' title='MAHAJANI LETTER SA'>&#x11170;<br><tt>11170</tt></td>
 <td class='new' title='MAHAJANI LETTER HA'>&#x11171;<br><tt>11171</tt></td>
-</tr><tr>
 <td class='new' title='MAHAJANI LETTER RRA'>&#x11172;<br><tt>11172</tt></td>
 <td class='new' title='MAHAJANI SIGN NUKTA'>&#x25CC;&#x11173;<br><tt>11173</tt></td>
 <td class='new' title='MAHAJANI ABBREVIATION SIGN'>&#x11174;<br><tt>11174</tt></td>
