--- a/unicodetools/data/charts/script/chart_Manichaean.html
+++ b/unicodetools/data/charts/script/chart_Manichaean.html
@@ -4,7 +4,18 @@
 <link rel='stylesheet' href='charts.css' type='text/css'>
 </head><body><h2>Manichaean</h2>
 <table>
+<td  title='ARABIC TATWEEL'>&#x640;<br><tt>0640</tt></td>
+<td  title='ARABIC TATWEEL WITH FATHATAN ABOVE'>&#xFE71;<br><tt>FE71</tt></td>
+<td  title='ARABIC FATHA MEDIAL FORM'>&#xFE77;<br><tt>FE77</tt></td>
+<td  title='ARABIC LIGATURE SHADDA WITH FATHA MEDIAL FORM'>&#xFCF2;<br><tt>FCF2</tt></td>
+<td  title='ARABIC DAMMA MEDIAL FORM'>&#xFE79;<br><tt>FE79</tt></td>
+<td  title='ARABIC LIGATURE SHADDA WITH DAMMA MEDIAL FORM'>&#xFCF3;<br><tt>FCF3</tt></td>
+<td  title='ARABIC KASRA MEDIAL FORM'>&#xFE7B;<br><tt>FE7B</tt></td>
+<td  title='ARABIC LIGATURE SHADDA WITH KASRA MEDIAL FORM'>&#xFCF4;<br><tt>FCF4</tt></td>
+<td  title='ARABIC SHADDA MEDIAL FORM'>&#xFE7D;<br><tt>FE7D</tt></td>
+<td  title='ARABIC SUKUN MEDIAL FORM'>&#xFE7F;<br><tt>FE7F</tt></td>
 <td class='new' title='MANICHAEAN LETTER ALEPH'>&#x10AC0;<br><tt>10AC0</tt></td>
+</tr><tr>
 <td class='new' title='MANICHAEAN LETTER BETH'>&#x10AC1;<br><tt>10AC1</tt></td>
 <td class='new' title='MANICHAEAN LETTER BHETH'>&#x10AC2;<br><tt>10AC2</tt></td>
 <td class='new' title='MANICHAEAN LETTER GIMEL'>&#x10AC3;<br><tt>10AC3</tt></td>
@@ -15,8 +26,8 @@
 <td class='new' title='MANICHAEAN SIGN UD'>&#x10AC8;<br><tt>10AC8</tt></td>
 <td class='new' title='MANICHAEAN LETTER ZAYIN'>&#x10AC9;<br><tt>10AC9</tt></td>
 <td class='new' title='MANICHAEAN LETTER ZHAYIN'>&#x10ACA;<br><tt>10ACA</tt></td>
-</tr><tr>
 <td class='new' title='MANICHAEAN LETTER JAYIN'>&#x10ACB;<br><tt>10ACB</tt></td>
+</tr><tr>
 <td class='new' title='MANICHAEAN LETTER JHAYIN'>&#x10ACC;<br><tt>10ACC</tt></td>
 <td class='new' title='MANICHAEAN LETTER HETH'>&#x10ACD;<br><tt>10ACD</tt></td>
 <td class='new' title='MANICHAEAN LETTER TETH'>&#x10ACE;<br><tt>10ACE</tt></td>
@@ -27,8 +38,8 @@
 <td class='new' title='MANICHAEAN LETTER LAMEDH'>&#x10AD3;<br><tt>10AD3</tt></td>
 <td class='new' title='MANICHAEAN LETTER DHAMEDH'>&#x10AD4;<br><tt>10AD4</tt></td>
 <td class='new' title='MANICHAEAN LETTER THAMEDH'>&#x10AD5;<br><tt>10AD5</tt></td>
-</tr><tr>
 <td class='new' title='MANICHAEAN LETTER MEM'>&#x10AD6;<br><tt>10AD6</tt></td>
+</tr><tr>
 <td class='new' title='MANICHAEAN LETTER NUN'>&#x10AD7;<br><tt>10AD7</tt></td>
 <td class='new' title='MANICHAEAN LETTER SAMEKH'>&#x10AD8;<br><tt>10AD8</tt></td>
 <td class='new' title='MANICHAEAN LETTER AYIN'>&#x10AD9;<br><tt>10AD9</tt></td>
@@ -39,8 +50,8 @@
 <td class='new' title='MANICHAEAN LETTER QOPH'>&#x10ADE;<br><tt>10ADE</tt></td>
 <td class='new' title='MANICHAEAN LETTER XOPH'>&#x10ADF;<br><tt>10ADF</tt></td>
 <td class='new' title='MANICHAEAN LETTER QHOPH'>&#x10AE0;<br><tt>10AE0</tt></td>
-</tr><tr>
 <td class='new' title='MANICHAEAN LETTER RESH'>&#x10AE1;<br><tt>10AE1</tt></td>
+</tr><tr>
 <td class='new' title='MANICHAEAN LETTER SHIN'>&#x10AE2;<br><tt>10AE2</tt></td>
 <td class='new' title='MANICHAEAN LETTER SSHIN'>&#x10AE3;<br><tt>10AE3</tt></td>
 <td class='new' title='MANICHAEAN LETTER TAW'>&#x10AE4;<br><tt>10AE4</tt></td>
@@ -51,8 +62,8 @@
 <td class='new' title='MANICHAEAN NUMBER TEN'>&#x10AED;<br><tt>10AED</tt></td>
 <td class='new' title='MANICHAEAN NUMBER TWENTY'>&#x10AEE;<br><tt>10AEE</tt></td>
 <td class='new' title='MANICHAEAN NUMBER ONE HUNDRED'>&#x10AEF;<br><tt>10AEF</tt></td>
-</tr><tr>
 <td class='new' title='MANICHAEAN PUNCTUATION STAR'>&#x10AF0;<br><tt>10AF0</tt></td>
+</tr><tr>
 <td class='new' title='MANICHAEAN PUNCTUATION FLEURON'>&#x10AF1;<br><tt>10AF1</tt></td>
 <td class='new' title='MANICHAEAN PUNCTUATION DOUBLE DOT WITHIN DOT'>&#x10AF2;<br><tt>10AF2</tt></td>
 <td class='new' title='MANICHAEAN PUNCTUATION DOT WITHIN DOT'>&#x10AF3;<br><tt>10AF3</tt></td>
