--- a/unicodetools/data/charts/script/chart_Psalter_Pahlavi.html
+++ b/unicodetools/data/charts/script/chart_Psalter_Pahlavi.html
@@ -4,7 +4,18 @@
 <link rel='stylesheet' href='charts.css' type='text/css'>
 </head><body><h2>Psalter_Pahlavi</h2>
 <table>
+<td  title='ARABIC TATWEEL'>&#x640;<br><tt>0640</tt></td>
+<td  title='ARABIC TATWEEL WITH FATHATAN ABOVE'>&#xFE71;<br><tt>FE71</tt></td>
+<td  title='ARABIC FATHA MEDIAL FORM'>&#xFE77;<br><tt>FE77</tt></td>
+<td  title='ARABIC LIGATURE SHADDA WITH FATHA MEDIAL FORM'>&#xFCF2;<br><tt>FCF2</tt></td>
+<td  title='ARABIC DAMMA MEDIAL FORM'>&#xFE79;<br><tt>FE79</tt></td>
+<td  title='ARABIC LIGATURE SHADDA WITH DAMMA MEDIAL FORM'>&#xFCF3;<br><tt>FCF3</tt></td>
+<td  title='ARABIC KASRA MEDIAL FORM'>&#xFE7B;<br><tt>FE7B</tt></td>
+<td  title='ARABIC LIGATURE SHADDA WITH KASRA MEDIAL FORM'>&#xFCF4;<br><tt>FCF4</tt></td>
+<td  title='ARABIC SHADDA MEDIAL FORM'>&#xFE7D;<br><tt>FE7D</tt></td>
+<td  title='ARABIC SUKUN MEDIAL FORM'>&#xFE7F;<br><tt>FE7F</tt></td>
 <td class='new' title='PSALTER PAHLAVI LETTER ALEPH'>&#x10B80;<br><tt>10B80</tt></td>
+</tr><tr>
 <td class='new' title='PSALTER PAHLAVI LETTER BETH'>&#x10B81;<br><tt>10B81</tt></td>
 <td class='new' title='PSALTER PAHLAVI LETTER GIMEL'>&#x10B82;<br><tt>10B82</tt></td>
 <td class='new' title='PSALTER PAHLAVI LETTER DALETH'>&#x10B83;<br><tt>10B83</tt></td>
@@ -15,8 +26,8 @@
 <td class='new' title='PSALTER PAHLAVI LETTER YODH'>&#x10B88;<br><tt>10B88</tt></td>
 <td class='new' title='PSALTER PAHLAVI LETTER KAPH'>&#x10B89;<br><tt>10B89</tt></td>
 <td class='new' title='PSALTER PAHLAVI LETTER LAMEDH'>&#x10B8A;<br><tt>10B8A</tt></td>
-</tr><tr>
 <td class='new' title='PSALTER PAHLAVI LETTER MEM-QOPH'>&#x10B8B;<br><tt>10B8B</tt></td>
+</tr><tr>
 <td class='new' title='PSALTER PAHLAVI LETTER NUN'>&#x10B8C;<br><tt>10B8C</tt></td>
 <td class='new' title='PSALTER PAHLAVI LETTER SAMEKH'>&#x10B8D;<br><tt>10B8D</tt></td>
 <td class='new' title='PSALTER PAHLAVI LETTER PE'>&#x10B8E;<br><tt>10B8E</tt></td>
@@ -27,8 +38,8 @@
 <td class='new' title='PSALTER PAHLAVI TURNED SECTION MARK'>&#x10B9A;<br><tt>10B9A</tt></td>
 <td class='new' title='PSALTER PAHLAVI FOUR DOTS WITH CROSS'>&#x10B9B;<br><tt>10B9B</tt></td>
 <td class='new' title='PSALTER PAHLAVI FOUR DOTS WITH DOT'>&#x10B9C;<br><tt>10B9C</tt></td>
-</tr><tr>
 <td class='new' title='PSALTER PAHLAVI NUMBER ONE'>&#x10BA9;<br><tt>10BA9</tt></td>
+</tr><tr>
 <td class='new' title='PSALTER PAHLAVI NUMBER TWO'>&#x10BAA;<br><tt>10BAA</tt></td>
 <td class='new' title='PSALTER PAHLAVI NUMBER THREE'>&#x10BAB;<br><tt>10BAB</tt></td>
 <td class='new' title='PSALTER PAHLAVI NUMBER FOUR'>&#x10BAC;<br><tt>10BAC</tt></td>
