--- a/unicodetools/data/charts/nameslist/n_3100.html
+++ b/unicodetools/data/charts/nameslist/n_3100.html
@@ -45,7 +45,7 @@
 <tr><td><code><a name='3125'>3125</a></code></td><td class='c'> ㄥ </td><td colSpan='2'><span class='name'>Bopomofo Letter Eng</span></td></tr>
 <tr><td><code><a name='3126'>3126</a></code></td><td class='c'> ㄦ </td><td colSpan='2'><span class='name'>Bopomofo Letter Er</span></td></tr>
 <tr><td><code><a name='3127'>3127</a></code></td><td class='c'> ㄧ </td><td colSpan='2'><span class='name'>Bopomofo Letter I</span></td></tr>
-<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>the horizontal stroke form is considered a rendering variant</td></tr>
+<tr><td> </td><td class='char'> </td><td class='c'>•</td><td>the horizontal stroke form is considered a vertical variant</td></tr>
 <tr><td><code><a name='3128'>3128</a></code></td><td class='c'> ㄨ </td><td colSpan='2'><span class='name'>Bopomofo Letter U</span></td></tr>
 <tr><td><code><a name='3129'>3129</a></code></td><td class='c'> ㄩ </td><td colSpan='2'><span class='name'>Bopomofo Letter Iu</span></td></tr>
 <tr><td colspan='4'><h2>Dialect (non-Mandarin) letters</h2></td></tr>
