--- a/unicodetools/data/charts/script/chart_Format.html
+++ b/unicodetools/data/charts/script/chart_Format.html
@@ -6,6 +6,7 @@
 <table>
 <td  title='SOFT HYPHEN'>&#xAD;<br><tt>00AD</tt></td>
 <td class='new' title='ARABIC NUMBER MARK ABOVE'>&#x605;<br><tt>0605</tt></td>
+<td  title='ARABIC LETTER MARK'>&#x61C;<br><tt>061C</tt></td>
 <td  title='ARABIC END OF AYAH'>&#x6DD;<br><tt>06DD</tt></td>
 <td  title='ZERO WIDTH SPACE'>&#x200B;<br><tt>200B</tt></td>
 <td  title='ZERO WIDTH NON-JOINER'>&#x200C;<br><tt>200C</tt></td>
@@ -14,8 +15,8 @@
 <td  title='RIGHT-TO-LEFT MARK'>&#x200F;<br><tt>200F</tt></td>
 <td  title='LEFT-TO-RIGHT EMBEDDING'>&#x202A;<br><tt>202A</tt></td>
 <td  title='RIGHT-TO-LEFT EMBEDDING'>&#x202B;<br><tt>202B</tt></td>
-<td  title='POP DIRECTIONAL FORMATTING'>&#x202C;<br><tt>202C</tt></td>
 </tr><tr>
+<td  title='POP DIRECTIONAL FORMATTING'>&#x202C;<br><tt>202C</tt></td>
 <td  title='LEFT-TO-RIGHT OVERRIDE'>&#x202D;<br><tt>202D</tt></td>
 <td  title='RIGHT-TO-LEFT OVERRIDE'>&#x202E;<br><tt>202E</tt></td>
 <td  title='WORD JOINER'>&#x2060;<br><tt>2060</tt></td>
@@ -26,23 +27,19 @@
 <td  title='LEFT-TO-RIGHT ISOLATE'>&#x2066;<br><tt>2066</tt></td>
 <td  title='RIGHT-TO-LEFT ISOLATE'>&#x2067;<br><tt>2067</tt></td>
 <td  title='FIRST STRONG ISOLATE'>&#x2068;<br><tt>2068</tt></td>
-<td  title='POP DIRECTIONAL ISOLATE'>&#x2069;<br><tt>2069</tt></td>
 </tr><tr>
+<td  title='POP DIRECTIONAL ISOLATE'>&#x2069;<br><tt>2069</tt></td>
 <td  title='INHIBIT SYMMETRIC SWAPPING'>&#x206A;<br><tt>206A</tt></td>
 <td  title='ACTIVATE SYMMETRIC SWAPPING'>&#x206B;<br><tt>206B</tt></td>
 <td  title='INHIBIT ARABIC FORM SHAPING'>&#x206C;<br><tt>206C</tt></td>
 <td  title='ACTIVATE ARABIC FORM SHAPING'>&#x206D;<br><tt>206D</tt></td>
 <td  title='NATIONAL DIGIT SHAPES'>&#x206E;<br><tt>206E</tt></td>
 <td  title='NOMINAL DIGIT SHAPES'>&#x206F;<br><tt>206F</tt></td>
-<td class='new' title='SHORTHAND FORMAT LETTER OVERLAP'>&#x1BCA0;<br><tt>1BCA0</tt></td>
-<td class='new' title='SHORTHAND FORMAT CONTINUING OVERLAP'>&#x1BCA1;<br><tt>1BCA1</tt></td>
-<td class='new' title='SHORTHAND FORMAT DOWN STEP'>&#x1BCA2;<br><tt>1BCA2</tt></td>
-<td class='new' title='SHORTHAND FORMAT UP STEP'>&#x1BCA3;<br><tt>1BCA3</tt></td>
 <td  title='MUSICAL SYMBOL BEGIN BEAM'>&#x1D173;<br><tt>1D173</tt></td>
-</tr><tr>
 <td  title='MUSICAL SYMBOL END BEAM'>&#x1D174;<br><tt>1D174</tt></td>
 <td  title='MUSICAL SYMBOL BEGIN TIE'>&#x1D175;<br><tt>1D175</tt></td>
 <td  title='MUSICAL SYMBOL END TIE'>&#x1D176;<br><tt>1D176</tt></td>
+</tr><tr>
 <td  title='MUSICAL SYMBOL BEGIN SLUR'>&#x1D177;<br><tt>1D177</tt></td>
 <td  title='MUSICAL SYMBOL END SLUR'>&#x1D178;<br><tt>1D178</tt></td>
 <td  title='MUSICAL SYMBOL BEGIN PHRASE'>&#x1D179;<br><tt>1D179</tt></td>
@@ -51,10 +48,10 @@
 <td  title='TAG SPACE'>&#xE0020;<br><tt>E0020</tt></td>
 <td  title='TAG EXCLAMATION MARK'>&#xE0021;<br><tt>E0021</tt></td>
 <td  title='TAG QUOTATION MARK'>&#xE0022;<br><tt>E0022</tt></td>
-</tr><tr>
 <td  title='TAG NUMBER SIGN'>&#xE0023;<br><tt>E0023</tt></td>
 <td  title='TAG DOLLAR SIGN'>&#xE0024;<br><tt>E0024</tt></td>
 <td  title='TAG PERCENT SIGN'>&#xE0025;<br><tt>E0025</tt></td>
+</tr><tr>
 <td  title='TAG AMPERSAND'>&#xE0026;<br><tt>E0026</tt></td>
 <td  title='TAG APOSTROPHE'>&#xE0027;<br><tt>E0027</tt></td>
 <td  title='TAG LEFT PARENTHESIS'>&#xE0028;<br><tt>E0028</tt></td>
@@ -63,10 +60,10 @@
 <td  title='TAG PLUS SIGN'>&#xE002B;<br><tt>E002B</tt></td>
 <td  title='TAG COMMA'>&#xE002C;<br><tt>E002C</tt></td>
 <td  title='TAG HYPHEN-MINUS'>&#xE002D;<br><tt>E002D</tt></td>
-</tr><tr>
 <td  title='TAG FULL STOP'>&#xE002E;<br><tt>E002E</tt></td>
 <td  title='TAG SOLIDUS'>&#xE002F;<br><tt>E002F</tt></td>
 <td  title='TAG DIGIT ZERO'>&#xE0030;<br><tt>E0030</tt></td>
+</tr><tr>
 <td  title='TAG DIGIT ONE'>&#xE0031;<br><tt>E0031</tt></td>
 <td  title='TAG DIGIT TWO'>&#xE0032;<br><tt>E0032</tt></td>
 <td  title='TAG DIGIT THREE'>&#xE0033;<br><tt>E0033</tt></td>
@@ -75,10 +72,10 @@
 <td  title='TAG DIGIT SIX'>&#xE0036;<br><tt>E0036</tt></td>
 <td  title='TAG DIGIT SEVEN'>&#xE0037;<br><tt>E0037</tt></td>
 <td  title='TAG DIGIT EIGHT'>&#xE0038;<br><tt>E0038</tt></td>
-</tr><tr>
 <td  title='TAG DIGIT NINE'>&#xE0039;<br><tt>E0039</tt></td>
 <td  title='TAG COLON'>&#xE003A;<br><tt>E003A</tt></td>
 <td  title='TAG SEMICOLON'>&#xE003B;<br><tt>E003B</tt></td>
+</tr><tr>
 <td  title='TAG LESS-THAN SIGN'>&#xE003C;<br><tt>E003C</tt></td>
 <td  title='TAG EQUALS SIGN'>&#xE003D;<br><tt>E003D</tt></td>
 <td  title='TAG GREATER-THAN SIGN'>&#xE003E;<br><tt>E003E</tt></td>
@@ -87,10 +84,10 @@
 <td  title='TAG LATIN CAPITAL LETTER A'>&#xE0041;<br><tt>E0041</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER B'>&#xE0042;<br><tt>E0042</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER C'>&#xE0043;<br><tt>E0043</tt></td>
-</tr><tr>
 <td  title='TAG LATIN CAPITAL LETTER D'>&#xE0044;<br><tt>E0044</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER E'>&#xE0045;<br><tt>E0045</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER F'>&#xE0046;<br><tt>E0046</tt></td>
+</tr><tr>
 <td  title='TAG LATIN CAPITAL LETTER G'>&#xE0047;<br><tt>E0047</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER H'>&#xE0048;<br><tt>E0048</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER I'>&#xE0049;<br><tt>E0049</tt></td>
@@ -99,10 +96,10 @@
 <td  title='TAG LATIN CAPITAL LETTER L'>&#xE004C;<br><tt>E004C</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER M'>&#xE004D;<br><tt>E004D</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER N'>&#xE004E;<br><tt>E004E</tt></td>
-</tr><tr>
 <td  title='TAG LATIN CAPITAL LETTER O'>&#xE004F;<br><tt>E004F</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER P'>&#xE0050;<br><tt>E0050</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER Q'>&#xE0051;<br><tt>E0051</tt></td>
+</tr><tr>
 <td  title='TAG LATIN CAPITAL LETTER R'>&#xE0052;<br><tt>E0052</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER S'>&#xE0053;<br><tt>E0053</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER T'>&#xE0054;<br><tt>E0054</tt></td>
@@ -111,10 +108,10 @@
 <td  title='TAG LATIN CAPITAL LETTER W'>&#xE0057;<br><tt>E0057</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER X'>&#xE0058;<br><tt>E0058</tt></td>
 <td  title='TAG LATIN CAPITAL LETTER Y'>&#xE0059;<br><tt>E0059</tt></td>
-</tr><tr>
 <td  title='TAG LATIN CAPITAL LETTER Z'>&#xE005A;<br><tt>E005A</tt></td>
 <td  title='TAG LEFT SQUARE BRACKET'>&#xE005B;<br><tt>E005B</tt></td>
 <td  title='TAG REVERSE SOLIDUS'>&#xE005C;<br><tt>E005C</tt></td>
+</tr><tr>
 <td  title='TAG RIGHT SQUARE BRACKET'>&#xE005D;<br><tt>E005D</tt></td>
 <td  title='TAG CIRCUMFLEX ACCENT'>&#xE005E;<br><tt>E005E</tt></td>
 <td  title='TAG LOW LINE'>&#xE005F;<br><tt>E005F</tt></td>
@@ -123,10 +120,10 @@
 <td  title='TAG LATIN SMALL LETTER B'>&#xE0062;<br><tt>E0062</tt></td>
 <td  title='TAG LATIN SMALL LETTER C'>&#xE0063;<br><tt>E0063</tt></td>
 <td  title='TAG LATIN SMALL LETTER D'>&#xE0064;<br><tt>E0064</tt></td>
-</tr><tr>
 <td  title='TAG LATIN SMALL LETTER E'>&#xE0065;<br><tt>E0065</tt></td>
 <td  title='TAG LATIN SMALL LETTER F'>&#xE0066;<br><tt>E0066</tt></td>
 <td  title='TAG LATIN SMALL LETTER G'>&#xE0067;<br><tt>E0067</tt></td>
+</tr><tr>
 <td  title='TAG LATIN SMALL LETTER H'>&#xE0068;<br><tt>E0068</tt></td>
 <td  title='TAG LATIN SMALL LETTER I'>&#xE0069;<br><tt>E0069</tt></td>
 <td  title='TAG LATIN SMALL LETTER J'>&#xE006A;<br><tt>E006A</tt></td>
@@ -135,10 +132,10 @@
 <td  title='TAG LATIN SMALL LETTER M'>&#xE006D;<br><tt>E006D</tt></td>
 <td  title='TAG LATIN SMALL LETTER N'>&#xE006E;<br><tt>E006E</tt></td>
 <td  title='TAG LATIN SMALL LETTER O'>&#xE006F;<br><tt>E006F</tt></td>
-</tr><tr>
 <td  title='TAG LATIN SMALL LETTER P'>&#xE0070;<br><tt>E0070</tt></td>
 <td  title='TAG LATIN SMALL LETTER Q'>&#xE0071;<br><tt>E0071</tt></td>
 <td  title='TAG LATIN SMALL LETTER R'>&#xE0072;<br><tt>E0072</tt></td>
+</tr><tr>
 <td  title='TAG LATIN SMALL LETTER S'>&#xE0073;<br><tt>E0073</tt></td>
 <td  title='TAG LATIN SMALL LETTER T'>&#xE0074;<br><tt>E0074</tt></td>
 <td  title='TAG LATIN SMALL LETTER U'>&#xE0075;<br><tt>E0075</tt></td>
@@ -147,10 +144,10 @@
 <td  title='TAG LATIN SMALL LETTER X'>&#xE0078;<br><tt>E0078</tt></td>
 <td  title='TAG LATIN SMALL LETTER Y'>&#xE0079;<br><tt>E0079</tt></td>
 <td  title='TAG LATIN SMALL LETTER Z'>&#xE007A;<br><tt>E007A</tt></td>
-</tr><tr>
 <td  title='TAG LEFT CURLY BRACKET'>&#xE007B;<br><tt>E007B</tt></td>
 <td  title='TAG VERTICAL LINE'>&#xE007C;<br><tt>E007C</tt></td>
 <td  title='TAG RIGHT CURLY BRACKET'>&#xE007D;<br><tt>E007D</tt></td>
+</tr><tr>
 <td  title='TAG TILDE'>&#xE007E;<br><tt>E007E</tt></td>
 <td  title='CANCEL TAG'>&#xE007F;<br><tt>E007F</tt></td>
 <td  title='ZERO WIDTH NO-BREAK SPACE'>&#xFEFF;<br><tt>FEFF</tt></td>
