--- a/unicodetools/data/charts/script/chart_Sinhala.html
+++ b/unicodetools/data/charts/script/chart_Sinhala.html
@@ -4,6 +4,8 @@
 <link rel='stylesheet' href='charts.css' type='text/css'>
 </head><body><h2>Sinhala</h2>
 <table>
+<td  title='DEVANAGARI DANDA'>&#x964;<br><tt>0964</tt></td>
+<td  title='DEVANAGARI DOUBLE DANDA'>&#x965;<br><tt>0965</tt></td>
 <td  title='SINHALA SIGN ANUSVARAYA'>&#x25CC;&#xD82;<br><tt>0D82</tt></td>
 <td  title='SINHALA SIGN VISARGAYA'>&#x25CC;&#xD83;<br><tt>0D83</tt></td>
 <td  title='SINHALA LETTER AYANNA'>&#xD85;<br><tt>0D85</tt></td>
@@ -13,9 +15,9 @@
 <td  title='SINHALA LETTER IYANNA'>&#xD89;<br><tt>0D89</tt></td>
 <td  title='SINHALA LETTER IIYANNA'>&#xD8A;<br><tt>0D8A</tt></td>
 <td  title='SINHALA LETTER UYANNA'>&#xD8B;<br><tt>0D8B</tt></td>
+</tr><tr>
 <td  title='SINHALA LETTER UUYANNA'>&#xD8C;<br><tt>0D8C</tt></td>
 <td  title='SINHALA LETTER IRUYANNA'>&#xD8D;<br><tt>0D8D</tt></td>
-</tr><tr>
 <td  title='SINHALA LETTER IRUUYANNA'>&#xD8E;<br><tt>0D8E</tt></td>
 <td  title='SINHALA LETTER ILUYANNA'>&#xD8F;<br><tt>0D8F</tt></td>
 <td  title='SINHALA LETTER ILUUYANNA'>&#xD90;<br><tt>0D90</tt></td>
@@ -25,9 +27,9 @@
 <td  title='SINHALA LETTER OYANNA'>&#xD94;<br><tt>0D94</tt></td>
 <td  title='SINHALA LETTER OOYANNA'>&#xD95;<br><tt>0D95</tt></td>
 <td  title='SINHALA LETTER AUYANNA'>&#xD96;<br><tt>0D96</tt></td>
+</tr><tr>
 <td  title='SINHALA LETTER ALPAPRAANA KAYANNA'>&#xD9A;<br><tt>0D9A</tt></td>
 <td  title='SINHALA LETTER MAHAAPRAANA KAYANNA'>&#xD9B;<br><tt>0D9B</tt></td>
-</tr><tr>
 <td  title='SINHALA LETTER ALPAPRAANA GAYANNA'>&#xD9C;<br><tt>0D9C</tt></td>
 <td  title='SINHALA LETTER MAHAAPRAANA GAYANNA'>&#xD9D;<br><tt>0D9D</tt></td>
 <td  title='SINHALA LETTER KANTAJA NAASIKYAYA'>&#xD9E;<br><tt>0D9E</tt></td>
@@ -37,9 +39,9 @@
 <td  title='SINHALA LETTER ALPAPRAANA JAYANNA'>&#xDA2;<br><tt>0DA2</tt></td>
 <td  title='SINHALA LETTER MAHAAPRAANA JAYANNA'>&#xDA3;<br><tt>0DA3</tt></td>
 <td  title='SINHALA LETTER TAALUJA NAASIKYAYA'>&#xDA4;<br><tt>0DA4</tt></td>
+</tr><tr>
 <td  title='SINHALA LETTER TAALUJA SANYOOGA NAAKSIKYAYA'>&#xDA5;<br><tt>0DA5</tt></td>
 <td  title='SINHALA LETTER SANYAKA JAYANNA'>&#xDA6;<br><tt>0DA6</tt></td>
-</tr><tr>
 <td  title='SINHALA LETTER ALPAPRAANA TTAYANNA'>&#xDA7;<br><tt>0DA7</tt></td>
 <td  title='SINHALA LETTER MAHAAPRAANA TTAYANNA'>&#xDA8;<br><tt>0DA8</tt></td>
 <td  title='SINHALA LETTER ALPAPRAANA DDAYANNA'>&#xDA9;<br><tt>0DA9</tt></td>
@@ -49,9 +51,9 @@
 <td  title='SINHALA LETTER ALPAPRAANA TAYANNA'>&#xDAD;<br><tt>0DAD</tt></td>
 <td  title='SINHALA LETTER MAHAAPRAANA TAYANNA'>&#xDAE;<br><tt>0DAE</tt></td>
 <td  title='SINHALA LETTER ALPAPRAANA DAYANNA'>&#xDAF;<br><tt>0DAF</tt></td>
+</tr><tr>
 <td  title='SINHALA LETTER MAHAAPRAANA DAYANNA'>&#xDB0;<br><tt>0DB0</tt></td>
 <td  title='SINHALA LETTER DANTAJA NAYANNA'>&#xDB1;<br><tt>0DB1</tt></td>
-</tr><tr>
 <td  title='SINHALA LETTER SANYAKA DAYANNA'>&#xDB3;<br><tt>0DB3</tt></td>
 <td  title='SINHALA LETTER ALPAPRAANA PAYANNA'>&#xDB4;<br><tt>0DB4</tt></td>
 <td  title='SINHALA LETTER MAHAAPRAANA PAYANNA'>&#xDB5;<br><tt>0DB5</tt></td>
@@ -61,9 +63,9 @@
 <td  title='SINHALA LETTER AMBA BAYANNA'>&#xDB9;<br><tt>0DB9</tt></td>
 <td  title='SINHALA LETTER YAYANNA'>&#xDBA;<br><tt>0DBA</tt></td>
 <td  title='SINHALA LETTER RAYANNA'>&#xDBB;<br><tt>0DBB</tt></td>
+</tr><tr>
 <td  title='SINHALA LETTER DANTAJA LAYANNA'>&#xDBD;<br><tt>0DBD</tt></td>
 <td  title='SINHALA LETTER VAYANNA'>&#xDC0;<br><tt>0DC0</tt></td>
-</tr><tr>
 <td  title='SINHALA LETTER TAALUJA SAYANNA'>&#xDC1;<br><tt>0DC1</tt></td>
 <td  title='SINHALA LETTER MUURDHAJA SAYANNA'>&#xDC2;<br><tt>0DC2</tt></td>
 <td  title='SINHALA LETTER DANTAJA SAYANNA'>&#xDC3;<br><tt>0DC3</tt></td>
@@ -73,9 +75,9 @@
 <td  title='SINHALA SIGN AL-LAKUNA'>&#x25CC;&#xDCA;<br><tt>0DCA</tt></td>
 <td  title='SINHALA VOWEL SIGN AELA-PILLA'>&#x25CC;&#xDCF;<br><tt>0DCF</tt></td>
 <td  title='SINHALA VOWEL SIGN KETTI AEDA-PILLA'>&#x25CC;&#xDD0;<br><tt>0DD0</tt></td>
+</tr><tr>
 <td  title='SINHALA VOWEL SIGN DIGA AEDA-PILLA'>&#x25CC;&#xDD1;<br><tt>0DD1</tt></td>
 <td  title='SINHALA VOWEL SIGN KETTI IS-PILLA'>&#x25CC;&#xDD2;<br><tt>0DD2</tt></td>
-</tr><tr>
 <td  title='SINHALA VOWEL SIGN DIGA IS-PILLA'>&#x25CC;&#xDD3;<br><tt>0DD3</tt></td>
 <td  title='SINHALA VOWEL SIGN KETTI PAA-PILLA'>&#x25CC;&#xDD4;<br><tt>0DD4</tt></td>
 <td  title='SINHALA VOWEL SIGN DIGA PAA-PILLA'>&#x25CC;&#xDD6;<br><tt>0DD6</tt></td>
@@ -85,9 +87,9 @@
 <td  title='SINHALA VOWEL SIGN KOMBUVA HAA AELA-PILLA'>&#x25CC;&#xDDC;<br><tt>0DDC</tt></td>
 <td  title='SINHALA VOWEL SIGN KOMBUVA HAA DIGA AELA-PILLA'>&#x25CC;&#xDDD;<br><tt>0DDD</tt></td>
 <td  title='SINHALA VOWEL SIGN KOMBUVA HAA GAYANUKITTA'>&#x25CC;&#xDDE;<br><tt>0DDE</tt></td>
+</tr><tr>
 <td  title='SINHALA VOWEL SIGN KOMBU DEKA'>&#x25CC;&#xDDB;<br><tt>0DDB</tt></td>
 <td  title='SINHALA VOWEL SIGN GAYANUKITTA'>&#x25CC;&#xDDF;<br><tt>0DDF</tt></td>
-</tr><tr>
 <td class='new' title='SINHALA LITH DIGIT ZERO'>&#xDE6;<br><tt>0DE6</tt></td>
 <td class='new' title='SINHALA LITH DIGIT ONE'>&#xDE7;<br><tt>0DE7</tt></td>
 <td class='new' title='SINHALA LITH DIGIT TWO'>&#xDE8;<br><tt>0DE8</tt></td>
@@ -97,9 +99,9 @@
 <td class='new' title='SINHALA LITH DIGIT SIX'>&#xDEC;<br><tt>0DEC</tt></td>
 <td class='new' title='SINHALA LITH DIGIT SEVEN'>&#xDED;<br><tt>0DED</tt></td>
 <td class='new' title='SINHALA LITH DIGIT EIGHT'>&#xDEE;<br><tt>0DEE</tt></td>
+</tr><tr>
 <td class='new' title='SINHALA LITH DIGIT NINE'>&#xDEF;<br><tt>0DEF</tt></td>
 <td  title='SINHALA VOWEL SIGN DIGA GAETTA-PILLA'>&#x25CC;&#xDF2;<br><tt>0DF2</tt></td>
-</tr><tr>
 <td  title='SINHALA VOWEL SIGN DIGA GAYANUKITTA'>&#x25CC;&#xDF3;<br><tt>0DF3</tt></td>
 <td  title='SINHALA PUNCTUATION KUNDDALIYA'>&#xDF4;<br><tt>0DF4</tt></td>
 <td class='new' title='SINHALA ARCHAIC DIGIT ONE'>&#x111E1;<br><tt>111E1</tt></td>
@@ -109,9 +111,9 @@
 <td class='new' title='SINHALA ARCHAIC DIGIT FIVE'>&#x111E5;<br><tt>111E5</tt></td>
 <td class='new' title='SINHALA ARCHAIC DIGIT SIX'>&#x111E6;<br><tt>111E6</tt></td>
 <td class='new' title='SINHALA ARCHAIC DIGIT SEVEN'>&#x111E7;<br><tt>111E7</tt></td>
+</tr><tr>
 <td class='new' title='SINHALA ARCHAIC DIGIT EIGHT'>&#x111E8;<br><tt>111E8</tt></td>
 <td class='new' title='SINHALA ARCHAIC DIGIT NINE'>&#x111E9;<br><tt>111E9</tt></td>
-</tr><tr>
 <td class='new' title='SINHALA ARCHAIC NUMBER TEN'>&#x111EA;<br><tt>111EA</tt></td>
 <td class='new' title='SINHALA ARCHAIC NUMBER TWENTY'>&#x111EB;<br><tt>111EB</tt></td>
 <td class='new' title='SINHALA ARCHAIC NUMBER THIRTY'>&#x111EC;<br><tt>111EC</tt></td>
@@ -121,6 +123,7 @@
 <td class='new' title='SINHALA ARCHAIC NUMBER SEVENTY'>&#x111F0;<br><tt>111F0</tt></td>
 <td class='new' title='SINHALA ARCHAIC NUMBER EIGHTY'>&#x111F1;<br><tt>111F1</tt></td>
 <td class='new' title='SINHALA ARCHAIC NUMBER NINETY'>&#x111F2;<br><tt>111F2</tt></td>
+</tr><tr>
 <td class='new' title='SINHALA ARCHAIC NUMBER ONE HUNDRED'>&#x111F3;<br><tt>111F3</tt></td>
 <td class='new' title='SINHALA ARCHAIC NUMBER ONE THOUSAND'>&#x111F4;<br><tt>111F4</tt></td>
 </table></body></html>
