--- a/unicodetools/data/charts/script/chart_Tirhuta.html
+++ b/unicodetools/data/charts/script/chart_Tirhuta.html
@@ -4,6 +4,8 @@
 <link rel='stylesheet' href='charts.css' type='text/css'>
 </head><body><h2>Tirhuta</h2>
 <table>
+<td  title='DEVANAGARI DANDA'>&#x964;<br><tt>0964</tt></td>
+<td  title='DEVANAGARI DOUBLE DANDA'>&#x965;<br><tt>0965</tt></td>
 <td  title='NORTH INDIC FRACTION ONE QUARTER'>&#xA830;<br><tt>A830</tt></td>
 <td  title='NORTH INDIC FRACTION ONE HALF'>&#xA831;<br><tt>A831</tt></td>
 <td  title='NORTH INDIC FRACTION THREE QUARTERS'>&#xA832;<br><tt>A832</tt></td>
@@ -13,9 +15,9 @@
 <td  title='NORTH INDIC QUARTER MARK'>&#xA836;<br><tt>A836</tt></td>
 <td  title='NORTH INDIC PLACEHOLDER MARK'>&#xA837;<br><tt>A837</tt></td>
 <td  title='NORTH INDIC RUPEE MARK'>&#xA838;<br><tt>A838</tt></td>
+</tr><tr>
 <td  title='NORTH INDIC QUANTITY MARK'>&#xA839;<br><tt>A839</tt></td>
 <td class='new' title='TIRHUTA ANJI'>&#x11480;<br><tt>11480</tt></td>
-</tr><tr>
 <td class='new' title='TIRHUTA LETTER A'>&#x11481;<br><tt>11481</tt></td>
 <td class='new' title='TIRHUTA LETTER AA'>&#x11482;<br><tt>11482</tt></td>
 <td class='new' title='TIRHUTA LETTER I'>&#x11483;<br><tt>11483</tt></td>
@@ -25,9 +27,9 @@
 <td class='new' title='TIRHUTA LETTER VOCALIC R'>&#x11487;<br><tt>11487</tt></td>
 <td class='new' title='TIRHUTA LETTER VOCALIC RR'>&#x11488;<br><tt>11488</tt></td>
 <td class='new' title='TIRHUTA LETTER VOCALIC L'>&#x11489;<br><tt>11489</tt></td>
+</tr><tr>
 <td class='new' title='TIRHUTA LETTER VOCALIC LL'>&#x1148A;<br><tt>1148A</tt></td>
 <td class='new' title='TIRHUTA LETTER E'>&#x1148B;<br><tt>1148B</tt></td>
-</tr><tr>
 <td class='new' title='TIRHUTA LETTER AI'>&#x1148C;<br><tt>1148C</tt></td>
 <td class='new' title='TIRHUTA LETTER O'>&#x1148D;<br><tt>1148D</tt></td>
 <td class='new' title='TIRHUTA LETTER AU'>&#x1148E;<br><tt>1148E</tt></td>
@@ -37,9 +39,9 @@
 <td class='new' title='TIRHUTA LETTER GHA'>&#x11492;<br><tt>11492</tt></td>
 <td class='new' title='TIRHUTA LETTER NGA'>&#x11493;<br><tt>11493</tt></td>
 <td class='new' title='TIRHUTA LETTER CA'>&#x11494;<br><tt>11494</tt></td>
+</tr><tr>
 <td class='new' title='TIRHUTA LETTER CHA'>&#x11495;<br><tt>11495</tt></td>
 <td class='new' title='TIRHUTA LETTER JA'>&#x11496;<br><tt>11496</tt></td>
-</tr><tr>
 <td class='new' title='TIRHUTA LETTER JHA'>&#x11497;<br><tt>11497</tt></td>
 <td class='new' title='TIRHUTA LETTER NYA'>&#x11498;<br><tt>11498</tt></td>
 <td class='new' title='TIRHUTA LETTER TTA'>&#x11499;<br><tt>11499</tt></td>
@@ -49,9 +51,9 @@
 <td class='new' title='TIRHUTA LETTER NNA'>&#x1149D;<br><tt>1149D</tt></td>
 <td class='new' title='TIRHUTA LETTER TA'>&#x1149E;<br><tt>1149E</tt></td>
 <td class='new' title='TIRHUTA LETTER THA'>&#x1149F;<br><tt>1149F</tt></td>
+</tr><tr>
 <td class='new' title='TIRHUTA LETTER DA'>&#x114A0;<br><tt>114A0</tt></td>
 <td class='new' title='TIRHUTA LETTER DHA'>&#x114A1;<br><tt>114A1</tt></td>
-</tr><tr>
 <td class='new' title='TIRHUTA LETTER NA'>&#x114A2;<br><tt>114A2</tt></td>
 <td class='new' title='TIRHUTA LETTER PA'>&#x114A3;<br><tt>114A3</tt></td>
 <td class='new' title='TIRHUTA LETTER PHA'>&#x114A4;<br><tt>114A4</tt></td>
@@ -61,9 +63,9 @@
 <td class='new' title='TIRHUTA LETTER YA'>&#x114A8;<br><tt>114A8</tt></td>
 <td class='new' title='TIRHUTA LETTER RA'>&#x114A9;<br><tt>114A9</tt></td>
 <td class='new' title='TIRHUTA LETTER LA'>&#x114AA;<br><tt>114AA</tt></td>
+</tr><tr>
 <td class='new' title='TIRHUTA LETTER VA'>&#x114AB;<br><tt>114AB</tt></td>
 <td class='new' title='TIRHUTA LETTER SHA'>&#x114AC;<br><tt>114AC</tt></td>
-</tr><tr>
 <td class='new' title='TIRHUTA LETTER SSA'>&#x114AD;<br><tt>114AD</tt></td>
 <td class='new' title='TIRHUTA LETTER SA'>&#x114AE;<br><tt>114AE</tt></td>
 <td class='new' title='TIRHUTA LETTER HA'>&#x114AF;<br><tt>114AF</tt></td>
@@ -73,9 +75,9 @@
 <td class='new' title='TIRHUTA VOWEL SIGN U'>&#x25CC;&#x114B3;<br><tt>114B3</tt></td>
 <td class='new' title='TIRHUTA VOWEL SIGN UU'>&#x25CC;&#x114B4;<br><tt>114B4</tt></td>
 <td class='new' title='TIRHUTA VOWEL SIGN VOCALIC R'>&#x25CC;&#x114B5;<br><tt>114B5</tt></td>
+</tr><tr>
 <td class='new' title='TIRHUTA VOWEL SIGN VOCALIC RR'>&#x25CC;&#x114B6;<br><tt>114B6</tt></td>
 <td class='new' title='TIRHUTA VOWEL SIGN VOCALIC L'>&#x25CC;&#x114B7;<br><tt>114B7</tt></td>
-</tr><tr>
 <td class='new' title='TIRHUTA VOWEL SIGN VOCALIC LL'>&#x25CC;&#x114B8;<br><tt>114B8</tt></td>
 <td class='new' title='TIRHUTA VOWEL SIGN E'>&#x25CC;&#x114B9;<br><tt>114B9</tt></td>
 <td class='new' title='TIRHUTA VOWEL SIGN O'>&#x25CC;&#x114BC;<br><tt>114BC</tt></td>
@@ -85,9 +87,9 @@
 <td class='new' title='TIRHUTA VOWEL SIGN SHORT O'>&#x25CC;&#x114BD;<br><tt>114BD</tt></td>
 <td class='new' title='TIRHUTA SIGN CANDRABINDU'>&#x25CC;&#x114BF;<br><tt>114BF</tt></td>
 <td class='new' title='TIRHUTA SIGN ANUSVARA'>&#x25CC;&#x114C0;<br><tt>114C0</tt></td>
+</tr><tr>
 <td class='new' title='TIRHUTA SIGN VISARGA'>&#x25CC;&#x114C1;<br><tt>114C1</tt></td>
 <td class='new' title='TIRHUTA SIGN VIRAMA'>&#x25CC;&#x114C2;<br><tt>114C2</tt></td>
-</tr><tr>
 <td class='new' title='TIRHUTA SIGN NUKTA'>&#x25CC;&#x114C3;<br><tt>114C3</tt></td>
 <td class='new' title='TIRHUTA SIGN AVAGRAHA'>&#x114C4;<br><tt>114C4</tt></td>
 <td class='new' title='TIRHUTA GVANG'>&#x114C5;<br><tt>114C5</tt></td>
@@ -97,9 +99,9 @@
 <td class='new' title='TIRHUTA DIGIT ONE'>&#x114D1;<br><tt>114D1</tt></td>
 <td class='new' title='TIRHUTA DIGIT TWO'>&#x114D2;<br><tt>114D2</tt></td>
 <td class='new' title='TIRHUTA DIGIT THREE'>&#x114D3;<br><tt>114D3</tt></td>
+</tr><tr>
 <td class='new' title='TIRHUTA DIGIT FOUR'>&#x114D4;<br><tt>114D4</tt></td>
 <td class='new' title='TIRHUTA DIGIT FIVE'>&#x114D5;<br><tt>114D5</tt></td>
-</tr><tr>
 <td class='new' title='TIRHUTA DIGIT SIX'>&#x114D6;<br><tt>114D6</tt></td>
 <td class='new' title='TIRHUTA DIGIT SEVEN'>&#x114D7;<br><tt>114D7</tt></td>
 <td class='new' title='TIRHUTA DIGIT EIGHT'>&#x114D8;<br><tt>114D8</tt></td>
