--- a/unicodetools/data/charts/index.html
+++ b/unicodetools/data/charts/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
+<title>Beta Unicode Charts</title>
 </head>
 
 <body>
